@@ -46,11 +46,12 @@ public class RService extends GenericServlet
 	{
 		super.init(config);
 		docrootPath = WeaveContextParams.getInstance(config.getServletContext()).getDocrootPath();
+		uploadPath = WeaveContextParams.getInstance(config.getServletContext()).getUploadPath();
 		
 	    try {
 	    	String rServePath = WeaveContextParams.getInstance(config.getServletContext()).getRServePath();
 	    	if (rServePath != null && rServePath.length() > 0)
-	    		rProcess = Runtime.getRuntime().exec(rServePath);
+	    		rProcess = Runtime.getRuntime().exec(new String[]{ rServePath });
 		} catch (IOException e) {
 			e.printStackTrace();
 		}
@@ -67,9 +68,56 @@ public class RService extends GenericServlet
 	}
 
 	private String docrootPath = "";
+	private String uploadPath = "";
 	
 	enum ServiceType { JRI, RSERVE; }
 	private static ServiceType serviceType = ServiceType.JRI;
+	
+	public boolean checkforJRIService()throws Exception
+	{
+	    boolean jriStatus;
+	
+	    try
+			{
+				if(RServiceUsingJRI.getREngine() != null)
+						jriStatus = true;
+					else
+						jriStatus = false;
+				
+			}
+			//if JRI not present
+			catch (RServiceUsingJRI.JRIConnectionException e) {
+				e.printStackTrace();
+				jriStatus = false;
+			}
+	//	}
+		
+		return jriStatus;
+	}
+	
+	public RResult[] runScriptOnCSVDataset()throws Exception
+	{
+		//checking
+		String scriptName = "Rtest.R";
+		String datasetName = "tencars.csv";
+		RResult[] returnedColumns;
+		//get the upload path for csv (on server)
+		//get the upload path for canned RScript (on server)
+		String cannedScriptLocation = uploadPath + "/RScripts/" + scriptName;
+		String csvLocation = uploadPath + "/CSVCollectionforRScripts/" + datasetName;
+		
+		Object[] inputValues = {cannedScriptLocation,csvLocation };
+		String[] inputNames = {"cannedScriptPath", "csvDatasetPath"};
+		String adminScript = "scriptFromFile <- source(cannedScriptPath)\n" +
+								  "library(survey)\n" +
+		                          "columnsReturnedFromR <- scriptFromFile$value(csvDatasetPath)\n";
+		String[] outputNames = {"columnsReturnedFromR"};
+		
+		returnedColumns = this.runScript(null, inputNames, inputValues, outputNames, adminScript, "", false, false, false);
+		
+		
+		return returnedColumns;
+	}
 	
 	public RResult[] runScript(String[] keys,String[] inputNames, Object[] inputValues, String[] outputNames, String script, String plotScript, boolean showIntermediateResults, boolean showWarnings, boolean useColumnAsList) throws Exception
 	{
